ingestion pipeline now takes configs from infra configs